added code for actual measurement

--- a/profile_analysis.ipynb
+++ b/profile_analysis.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,12 +110,26 @@
     "decoding_latencies = np.array(final_decoding_latencies)\n",
     "\n",
     "quad_params, _ = curve_fit(quadratic, token_lengths, prefill_latencies)\n",
-    "linear_params, _ = curve_fit(linear, token_lengths, decoding_latencies)"
+    "linear_params, _ = curve_fit(linear, token_lengths, decoding_latencies)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"parameters.json\", \"w\") as f:\n",
+    "    json.dump({\n",
+    "        \"quadratic\": quad_params.tolist(),\n",
+    "        \"linear\": linear_params.tolist()\n",
+    "    }, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -169,9 +183,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/nxclab/anaconda3/envs/vllm/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "from textwrap import dedent\n",
@@ -184,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,9 +273,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloding the toknizer...\n",
+      "Done\n",
+      "Downloding the model...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint shards: 100%|██████████| 4/4 [00:08<00:00,  2.10s/it]\n",
+      "The new embeddings will be initialized from a multivariate normal distribution that has old embeddings' mean and covariance. As described in this article: https://nlp.stanford.edu/~johnhew/vocab-expansion.html. To disable this, use `mean_resizing=False`\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n",
+      "{'model.embed_tokens': 0, 'model.layers.0': 0, 'model.layers.1': 0, 'model.layers.2': 0, 'model.layers.3': 0, 'model.layers.4': 0, 'model.layers.5': 0, 'model.layers.6': 0, 'model.layers.7': 0, 'model.layers.8': 0, 'model.layers.9': 0, 'model.layers.10': 0, 'model.layers.11': 0, 'model.layers.12': 0, 'model.layers.13': 0, 'model.layers.14': 1, 'model.layers.15': 1, 'model.layers.16': 1, 'model.layers.17': 1, 'model.layers.18': 1, 'model.layers.19': 1, 'model.layers.20': 1, 'model.layers.21': 1, 'model.layers.22': 1, 'model.layers.23': 1, 'model.layers.24': 1, 'model.layers.25': 1, 'model.layers.26': 1, 'model.layers.27': 1, 'model.layers.28': 1, 'model.layers.29': 1, 'model.layers.30': 1, 'model.layers.31': 1, 'model.norm': 1, 'model.rotary_emb': 1, 'lm_head': 1}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The new lm_head weights will be initialized from a multivariate normal distribution that has old embeddings' mean and covariance. As described in this article: https://nlp.stanford.edu/~johnhew/vocab-expansion.html. To disable this, use `mean_resizing=False`\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Embedding(128257, 4096)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(\"Downloding the toknizer...\")\n",
     "tokenizer = AutoTokenizer.from_pretrained(MODEL_NAME, use_fast=True, token=access_token)\n",
@@ -280,8 +346,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2596.229683962881, 2601.0673596927077, 2615.580386882187, 2649.4441169909724, 2639.7687655313193, 2673.632495640105, 2717.171577208543, 2692.9831985594105, 2726.846928668196, 2736.522280127849]\n"
+     ]
+    }
+   ],
    "source": [
+    "BATCH_SIZE = 4\n",
+    "WARMUP_STEPS = 50\n",
+    "PREFILL_STEPS = 20\n",
+    "DECODING_STEPS = 20\n",
+    "MAX_NEW_TOKENS = 50\n",
+    "\n",
+    "prefill_latencies_board = []\n",
+    "decoding_latencies_board = []\n",
+    "\n",
     "questions = [\n",
     "    {\"question\": \"What’s your favorite color?\"},\n",
     "    {\"question\": \"Do you prefer mornings or evenings?\"},\n",
@@ -293,7 +376,76 @@
     "    {\"question\": \"If you had the chance to bring back one extinct species, which would it be, and how would its return benefit the planet?\"},\n",
     "    {\"question\": \"Suppose you were tasked with developing a program to teach empathy and kindness in schools. What activities or lessons would you include, and how would you measure its success?\"},\n",
     "    {\"question\": \"If you could collaborate with a global organization to tackle a major issue like climate change or poverty, what strategies would you propose, and how would you ensure long-term positive outcomes?\"}\n",
-    "]"
+    "]\n",
+    "\n",
+    "datasets = [prepare_dataset_for_speed_eval(question, BATCH_SIZE, tokenizer).to(\"cuda\") for question in questions]\n",
+    "dataset_lengths_in_tokens = [count_tokens(format_example(question, tokenizer), tokenizer) for question in questions] # veriefied that no duplicatino exists\n",
+    "\n",
+    "# predicted latency\n",
+    "prefill_latencies_pred = quadratic(np.array(dataset_lengths_in_tokens), *quad_params).tolist()\n",
+    "decoding_latencies_pred = [item * 50 for item in linear(np.array(dataset_lengths_in_tokens), *linear_params).tolist()]\n",
+    "\n",
+    "# actual measurement\n",
+    "with torch.inference_mode():\n",
+    "    for i, dataset in enumerate(datasets):\n",
+    "        prefill_latencies = []\n",
+    "        prefill_decoding_latencies = []\n",
+    "        \n",
+    "        # warmup\n",
+    "        if i == 0:\n",
+    "            print(\"Warming up...\")\n",
+    "            torch.cuda.synchronize()\n",
+    "            for _ in range(WARMUP_STEPS):\n",
+    "                model.generate(**dataset, max_new_tokens = 1)\n",
+    "            torch.cuda.synchronize()\n",
+    "            print(\"Warming up done \\n\")\n",
+    "        \n",
+    "        print(f'Profiling step {i+1}')\n",
+    "        # actual measurement(prefill)\n",
+    "        print(\"Start measuring prefill latency...\")\n",
+    "        for _ in range(PREFILL_STEPS):\n",
+    "            torch.cuda.synchronize()\n",
+    "            start = torch.cuda.Event(enable_timing=True)\n",
+    "            end = torch.cuda.Event(enable_timing=True)\n",
+    "            start.record()\n",
+    "            outputs = model.generate(**dataset, max_new_tokens = 1)\n",
+    "            end.record()\n",
+    "            torch.cuda.synchronize()\n",
+    "            prefill_latencies.append(start.elapsed_time(end))\n",
+    "        print(\"Prefill Measurement done\")\n",
+    "        \n",
+    "        # actual measurement(decoding)\n",
+    "        print(\"Start measuring decoding latency...\")\n",
+    "        for _ in range(DECODING_STEPS):\n",
+    "            torch.cuda.synchronize()\n",
+    "            start = torch.cuda.Event(enable_timing=True)\n",
+    "            end = torch.cuda.Event(enable_timing=True)\n",
+    "            start.record()\n",
+    "            outputs = model.generate(**dataset, max_length=MAX_NEW_TOKENS+dataset_lengths_in_tokens[i])\n",
+    "            end.record()\n",
+    "            torch.cuda.synchronize()\n",
+    "            prefill_decoding_latencies.append(start.elapsed_time(end))\n",
+    "        print(\"Decoding Measurement done\")\n",
+    "        \n",
+    "        # Record the latencies\n",
+    "        decoding_latencies_per_token = [(a - b)/MAX_NEW_TOKENS for a, b in zip(prefill_decoding_latencies, prefill_latencies)]\n",
+    "        avg_prefil = sum(prefill_latencies) / PREFILL_STEPS\n",
+    "        avg_decode = sum(prefill_decoding_latencies) / DECODING_STEPS # modified (measure the whole decoding process)\n",
+    "        prefill_latencies_board.append(avg_prefil)\n",
+    "        decoding_latencies_board.append(avg_decode)\n",
+    "        \n",
+    "# Save the results\n",
+    "results = {\n",
+    "    \"prefill_latencies\": prefill_latencies_board,\n",
+    "    \"decoding_latencies\": decoding_latencies_board,\n",
+    "    \"predicted_prefill_latencies\": prefill_latencies_pred,\n",
+    "    \"predicted_decoding_latencies\": decoding_latencies_pred,\n",
+    "    \"dataset_lengths_in_tokens\": dataset_lengths_in_tokens\n",
+    "}\n",
+    "with open(\"measurement_results.json\", \"w\") as f:\n",
+    "    json.dump(results, f, indent=4)\n",
+    "    \n",
+    "print(\"Result saved, profiling done\")\n"
    ]
   }
  ],
