finished measurement & profiling

--- a/profile_analysis.ipynb
+++ b/profile_analysis.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 4/4 [00:08<00:00,  2.10s/it]\n",
+      "Loading checkpoint shards: 100%|██████████| 4/4 [00:08<00:00,  2.07s/it]\n",
       "The new embeddings will be initialized from a multivariate normal distribution that has old embeddings' mean and covariance. As described in this article: https://nlp.stanford.edu/~johnhew/vocab-expansion.html. To disable this, use `mean_resizing=False`\n"
      ]
     },
@@ -314,7 +314,7 @@
        "Embedding(128257, 4096)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,14 +344,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2596.229683962881, 2601.0673596927077, 2615.580386882187, 2649.4441169909724, 2639.7687655313193, 2673.632495640105, 2717.171577208543, 2692.9831985594105, 2726.846928668196, 2736.522280127849]\n"
+      "Warming up...\n",
+      "Warming up done \n",
+      "\n",
+      "Profiling step 1\n",
+      "Start measuring prefill latency...\n",
+      "Prefill Measurement done\n",
+      "Start measuring decoding latency...\n",
+      "Decoding Measurement done\n",
+      "Profiling step 2\n",
+      "Start measuring prefill latency...\n",
+      "Prefill Measurement done\n",
+      "Start measuring decoding latency...\n",
+      "Decoding Measurement done\n",
+      "Profiling step 3\n",
+      "Start measuring prefill latency...\n",
+      "Prefill Measurement done\n",
+      "Start measuring decoding latency...\n",
+      "Decoding Measurement done\n",
+      "Profiling step 4\n",
+      "Start measuring prefill latency...\n",
+      "Prefill Measurement done\n",
+      "Start measuring decoding latency...\n",
+      "Decoding Measurement done\n",
+      "Profiling step 5\n",
+      "Start measuring prefill latency...\n",
+      "Prefill Measurement done\n",
+      "Start measuring decoding latency...\n",
+      "Decoding Measurement done\n",
+      "Profiling step 6\n",
+      "Start measuring prefill latency...\n",
+      "Prefill Measurement done\n",
+      "Start measuring decoding latency...\n",
+      "Decoding Measurement done\n",
+      "Profiling step 7\n",
+      "Start measuring prefill latency...\n",
+      "Prefill Measurement done\n",
+      "Start measuring decoding latency...\n",
+      "Decoding Measurement done\n",
+      "Profiling step 8\n",
+      "Start measuring prefill latency...\n",
+      "Prefill Measurement done\n",
+      "Start measuring decoding latency...\n",
+      "Decoding Measurement done\n",
+      "Profiling step 9\n",
+      "Start measuring prefill latency...\n",
+      "Prefill Measurement done\n",
+      "Start measuring decoding latency...\n",
+      "Decoding Measurement done\n",
+      "Profiling step 10\n",
+      "Start measuring prefill latency...\n",
+      "Prefill Measurement done\n",
+      "Start measuring decoding latency...\n",
+      "Decoding Measurement done\n",
+      "Result saved, profiling done\n"
      ]
     }
    ],
@@ -446,6 +499,234 @@
     "    json.dump(results, f, indent=4)\n",
     "    \n",
     "print(\"Result saved, profiling done\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>token_lengths</th>\n",
+       "      <th>prefill_latencies</th>\n",
+       "      <th>decoding_latencies</th>\n",
+       "      <th>predicted_prefill_latencies</th>\n",
+       "      <th>predicted_decoding_latencies</th>\n",
+       "      <th>error_prefill</th>\n",
+       "      <th>error_decoding</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>83</td>\n",
+       "      <td>292.754970</td>\n",
+       "      <td>2589.367700</td>\n",
+       "      <td>293.354198</td>\n",
+       "      <td>2596.229684</td>\n",
+       "      <td>0.204686</td>\n",
+       "      <td>0.265006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>84</td>\n",
+       "      <td>296.524133</td>\n",
+       "      <td>2598.354419</td>\n",
+       "      <td>296.885154</td>\n",
+       "      <td>2601.067360</td>\n",
+       "      <td>0.121751</td>\n",
+       "      <td>0.104410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>87</td>\n",
+       "      <td>299.694672</td>\n",
+       "      <td>2612.618604</td>\n",
+       "      <td>307.136556</td>\n",
+       "      <td>2615.580387</td>\n",
+       "      <td>2.483155</td>\n",
+       "      <td>0.113365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>92</td>\n",
+       "      <td>312.071634</td>\n",
+       "      <td>2635.082385</td>\n",
+       "      <td>323.084011</td>\n",
+       "      <td>2639.768766</td>\n",
+       "      <td>3.528798</td>\n",
+       "      <td>0.177846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>94</td>\n",
+       "      <td>312.484158</td>\n",
+       "      <td>2638.867249</td>\n",
+       "      <td>329.064617</td>\n",
+       "      <td>2649.444117</td>\n",
+       "      <td>5.306016</td>\n",
+       "      <td>0.400811</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>99</td>\n",
+       "      <td>361.010764</td>\n",
+       "      <td>2699.537915</td>\n",
+       "      <td>343.020195</td>\n",
+       "      <td>2673.632496</td>\n",
+       "      <td>4.983389</td>\n",
+       "      <td>0.959624</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>103</td>\n",
+       "      <td>363.081615</td>\n",
+       "      <td>2707.518042</td>\n",
+       "      <td>353.160262</td>\n",
+       "      <td>2692.983199</td>\n",
+       "      <td>2.732541</td>\n",
+       "      <td>0.536833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>108</td>\n",
+       "      <td>366.594522</td>\n",
+       "      <td>2719.506165</td>\n",
+       "      <td>364.554855</td>\n",
+       "      <td>2717.171577</td>\n",
+       "      <td>0.556382</td>\n",
+       "      <td>0.085846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>110</td>\n",
+       "      <td>366.353452</td>\n",
+       "      <td>2722.875623</td>\n",
+       "      <td>368.714316</td>\n",
+       "      <td>2726.846929</td>\n",
+       "      <td>0.644423</td>\n",
+       "      <td>0.145850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>112</td>\n",
+       "      <td>367.169910</td>\n",
+       "      <td>2727.148303</td>\n",
+       "      <td>372.646135</td>\n",
+       "      <td>2736.522280</td>\n",
+       "      <td>1.491469</td>\n",
+       "      <td>0.343728</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   token_lengths  prefill_latencies  decoding_latencies  \\\n",
+       "0             83         292.754970         2589.367700   \n",
+       "1             84         296.524133         2598.354419   \n",
+       "2             87         299.694672         2612.618604   \n",
+       "3             92         312.071634         2635.082385   \n",
+       "4             94         312.484158         2638.867249   \n",
+       "5             99         361.010764         2699.537915   \n",
+       "6            103         363.081615         2707.518042   \n",
+       "7            108         366.594522         2719.506165   \n",
+       "8            110         366.353452         2722.875623   \n",
+       "9            112         367.169910         2727.148303   \n",
+       "\n",
+       "   predicted_prefill_latencies  predicted_decoding_latencies  error_prefill  \\\n",
+       "0                   293.354198                   2596.229684       0.204686   \n",
+       "1                   296.885154                   2601.067360       0.121751   \n",
+       "2                   307.136556                   2615.580387       2.483155   \n",
+       "3                   323.084011                   2639.768766       3.528798   \n",
+       "4                   329.064617                   2649.444117       5.306016   \n",
+       "5                   343.020195                   2673.632496       4.983389   \n",
+       "6                   353.160262                   2692.983199       2.732541   \n",
+       "7                   364.554855                   2717.171577       0.556382   \n",
+       "8                   368.714316                   2726.846929       0.644423   \n",
+       "9                   372.646135                   2736.522280       1.491469   \n",
+       "\n",
+       "   error_decoding  \n",
+       "0        0.265006  \n",
+       "1        0.104410  \n",
+       "2        0.113365  \n",
+       "3        0.177846  \n",
+       "4        0.400811  \n",
+       "5        0.959624  \n",
+       "6        0.536833  \n",
+       "7        0.085846  \n",
+       "8        0.145850  \n",
+       "9        0.343728  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Do actual analysis\n",
+    "prefill_latencies = results[\"prefill_latencies\"]\n",
+    "decoding_latencies = results[\"decoding_latencies\"]\n",
+    "predicted_prefill_latencies = results[\"predicted_prefill_latencies\"]\n",
+    "predicted_decoding_latencies = results[\"predicted_decoding_latencies\"]\n",
+    "dataset_lengths_in_tokens = results[\"dataset_lengths_in_tokens\"]\n",
+    "\n",
+    "unique_data = []\n",
+    "averaged_duplicates = []\n",
+    "\n",
+    "seen_lengths = set()\n",
+    "\n",
+    "for length, prefill, decode, pred_prefill, pred_decode in zip(dataset_lengths_in_tokens, prefill_latencies, decoding_latencies, predicted_prefill_latencies, predicted_decoding_latencies):\n",
+    "    if dataset_lengths_in_tokens.count(length) > 1 and length not in seen_lengths:\n",
+    "        indices = [i for i, x in enumerate(dataset_lengths_in_tokens) if x == length]\n",
+    "        avg_prefill = sum([prefill_latencies[i] for i in indices]) / len(indices)\n",
+    "        avg_decode = sum([decoding_latencies[i] for i in indices]) / len(indices)\n",
+    "        avg_pred_prefill = sum([predicted_prefill_latencies[i] for i in indices]) / len(indices)\n",
+    "        avg_pred_decode = sum([predicted_decoding_latencies[i] for i in indices]) / len(indices)\n",
+    "        averaged_duplicates.append((length, avg_prefill, avg_decode, avg_pred_prefill, avg_pred_decode))\n",
+    "        seen_lengths.add(length)\n",
+    "    elif dataset_lengths_in_tokens.count(length) == 1:\n",
+    "        unique_data.append((length, prefill, decode, pred_prefill, pred_decode))\n",
+    "    else:\n",
+    "        pass\n",
+    "    \n",
+    "final_data = sorted(unique_data + averaged_duplicates, key=lambda x: x[0])\n",
+    "final_lengths, final_prefill_latencies, final_decoding_latencies, final_pred_prefill_latencies, final_pred_decoding_latencies = zip(*final_data)\n",
+    "error_prefill = [abs(a - b) / a * 100 for a, b in zip(final_prefill_latencies, final_pred_prefill_latencies)]\n",
+    "error_decoding = [abs(a - b) / a * 100 for a, b in zip(final_decoding_latencies, final_pred_decoding_latencies)]\n",
+    "\n",
+    "final_df = pd.DataFrame({\n",
+    "    \"token_lengths\": final_lengths,\n",
+    "    \"prefill_latencies\": final_prefill_latencies,\n",
+    "    \"decoding_latencies\": final_decoding_latencies,\n",
+    "    \"predicted_prefill_latencies\": final_pred_prefill_latencies,\n",
+    "    \"predicted_decoding_latencies\": final_pred_decoding_latencies,\n",
+    "    \"error_prefill\" : error_prefill,\n",
+    "    \"error_decoding\" : error_decoding\n",
+    "})\n",
+    "\n",
+    "from IPython.display import display\n",
+    "display(final_df)\n"
    ]
   }
  ],
