--- a/profile_analysis.ipynb
+++ b/profile_analysis.ipynb
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
     "        print(\"Decoding Measurement done\")\n",
     "        \n",
     "        # Record the latencies\n",
-    "        decoding_latencies_per_token = [(a - b)/MAX_NEW_TOKENS for a, b in zip(prefill_decoding_latencies, prefill_latencies)]\n",
+    "        decoding_latencies_per_token = [(a - b)/(MAX_NEW_TOKENS - 1) for a, b in zip(prefill_decoding_latencies, prefill_latencies)]\n",
     "        avg_prefil = sum(prefill_latencies) / PREFILL_STEPS\n",
     "        avg_decode = sum(prefill_decoding_latencies) / DECODING_STEPS # modified (measure the whole decoding process)\n",
     "        prefill_latencies_board.append(avg_prefil)\n",
@@ -746,7 +746,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
