added readme and deleted hf tokens

--- a/generate_profile.ipynb
+++ b/generate_profile.ipynb
@@ -64,12 +64,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "SEED = 42\n",
-    "access_token = \"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\"\n",
     "\n",
     "def seed_everything(seed: int):\n",
     "    random.seed(seed)\n",
@@ -83,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +112,7 @@
    ],
    "source": [
     "print(\"Downloding the toknizer...\")\n",
-    "tokenizer = AutoTokenizer.from_pretrained(MODEL_NAME, use_fast=True, token=access_token)\n",
+    "tokenizer = AutoTokenizer.from_pretrained(MODEL_NAME, use_fast=True)\n",
     "tokenizer.add_special_tokens({\"pad_token\": PAD_TOKEN})\n",
     "tokenizer.padding_side = \"left\"\n",
     "print(\"Done\")\n",
@@ -121,8 +120,7 @@
     "print(\"Downloding the model...\")\n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
     "    MODEL_NAME,\n",
-    "    device_map = \"auto\",\n",
-    "    token=access_token\n",
+    "    device_map = \"auto\"\n",
     ")\n",
     "print(\"Done\")\n",
     "\n",
