--- a/profile_analysis.ipynb
+++ b/profile_analysis.ipynb
@@ -254,12 +254,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "SEED = 42\n",
-    "access_token = \"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\"\n",
     "\n",
     "def seed_everything(seed: int):\n",
     "    random.seed(seed)\n",
@@ -273,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +320,7 @@
    ],
    "source": [
     "print(\"Downloding the toknizer...\")\n",
-    "tokenizer = AutoTokenizer.from_pretrained(MODEL_NAME, use_fast=True, token=access_token)\n",
+    "tokenizer = AutoTokenizer.from_pretrained(MODEL_NAME, use_fast=True)\n",
     "tokenizer.add_special_tokens({\"pad_token\": PAD_TOKEN})\n",
     "tokenizer.padding_side = \"left\"\n",
     "print(\"Done\")\n",
@@ -329,8 +328,7 @@
     "print(\"Downloding the model...\")\n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
     "    MODEL_NAME,\n",
-    "    device_map = \"auto\",\n",
-    "    token=access_token\n",
+    "    device_map = \"auto\"\n",
     ")\n",
     "print(\"Done\")\n",
     "\n",
